Projects/elk-on-k8s/kibana.yml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: kibana
  labels:
    k8s-app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: kibana
  template:
    metadata:
      labels:
        k8s-app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:6.1.2
        ports:
        - containerPort: 5601
---
kind: Service
apiVersion: v1
metadata:
  name: kibana
spec:
  selector:
    k8s-app: kibana
  ports:
  - port: 5601
