Projects/elk-on-k8s/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
  - host: kibana.app.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
